@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2073 2004/01/16 12:27:42 lculik Exp $
+ * $Id: ChangeLog,v 1.2074 2004/01/16 13:15:39 ignacioortiz Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,6 +8,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2004-01-16 09:50 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  * source/common/hbver.c
+  * source/pp/ppcore.c
+    * cast osversionex to osversion (is winbase.h wrong?)
+  * source/rtl/filesys.c
+    * casts in hb_fileTrim
 
 2004-01-16 14:15 UTC+0100 Ignacio Ortiz <iozuniga@ozs.com>
 * xharbour/source/common/hbver.c
